<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#93c693"
    android:layout_height="match_parent"
    tools:context="com.example.rohittamra.unitconverter.Description.Km_description">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Kilometer"
            android:background="#363434"
            android:typeface="monospace"
            android:textStyle="bold|italic|normal"
            android:padding="15dp"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/km_desc"/>
        <TextView
            android:layout_width="match_parent"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:text="@string/km_unitSystem"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/km_siUnit"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/km_Imperial"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/km_Nautical"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
